[mod] add cmake target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,3 +45,26 @@ set(LINK_LIBS
 )
 
 target_link_libraries(${PROJECT_NAME} ${LINK_LIBS})
+
+set(prefix      ${CMAKE_INSTALL_PREFIX})
+set(exec_prefix "\${prefix}")
+set(libdir      "\${exec_prefix}/${JANSSON_INSTALL_LIB_DIR}")
+set(includedir  "\${prefix}/${JANSSON_INSTALL_INCLUDE_DIR}")
+
+set(JSON2PB_HDR_PUBLIC
+    ${PROJECT_SOURCE_DIR}/json2pb.h
+)
+
+option(JSON2PB_INSTALL "Generate installation target" ON)
+if (JSON2PB_INSTALL)
+    install(TARGETS json2pb
+            EXPORT json2pbTargets
+            LIBRARY DESTINATION "lib"
+            ARCHIVE DESTINATION "lib"
+            RUNTIME DESTINATION "bin"
+            INCLUDES DESTINATION "include")
+
+    install(FILES ${JSON2PB_HDR_PUBLIC}
+            DESTINATION "include")
+endif()
+
